# aquila

./: CMakeLists.txt  Dockerfile  Dockerfile.ROS2  README.md  docker-compose.yml  ros_bridge.sh  setup.sh
.github/workflows/: ci.yml
docker/: Dockerfile  Dockerfile.dev  docker-compose.yml
docs/: design_overview.md
fsw/: CMakeLists.txt
fsw/include/aquila/: controller.hpp  estimator.hpp  logger.hpp  modes.hpp  sensors.hpp  state.hpp
fsw/src/: config.cpp  controller.cpp  estimator.cpp  logger.cpp  main_loop.cpp  modes.cpp  sensors.cpp
fsw/tests/: test_dummy.cpp
legacy_engine/: README.md
legacy_engine/fsw/include/aquila/: config.hpp  controller.hpp  estimator.hpp  logger.hpp  modes.hpp  sensors.hpp
legacy_engine/fsw/src/: controller.cpp  estimator.cpp  logger.cpp  main_loop.cpp  modes.cpp  state.cpp
legacy_engine/sim/: __init__.py  closed_loop.py  dynamics_6dof.py  live_loop.py  scenarios.py  sensors.py
legacy_engine/tools/: animate_run_2d.py  plot_est_vs_gps.py  plot_imu_consistency.py
ros2_workspace/install/px4_msgs/share/px4_msgs/: package.sh
ros2_workspace/log/: latest_build
ros2_workspace/src/aquila_node/: package.xml  setup.cfg  setup.py
ros2_workspace/src/aquila_node/aquila_node/: state_estimator.py
scripts/: square_mission.py
sim/: closed_loop.py  dynamics.py  dynamics_6dof.py  live_loop.py  scenarios.py  sensors.py  trim.py
sim/tests/: test_sanity.py
tools/: plot_est_vs_gps.py  plot_fsw_output.py  plot_imu_consistency.py  plot_modes.py  plot_open_vs_closed.py  plot_run_summary.py  plot_trajectories.py
(+18 files in other folders)
